--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "video.js": "^7.6.6"
+    "video.js": "^7.6.6",
+    "xml2js": "^0.4.22"
   },
   "scripts": {
     "start": "react-scripts start",
