--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bbb-playback",
   "version": "3.0.0",
+  "homepage": "/playback/presentation/3.0",
   "dependencies": {
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
@@ -29,5 +30,16 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "/playback/presentation/3.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pedrobmarin/bbb-playback.git"
+  },
+  "keywords": [
+    "bigbluebutton",
+    "playback"
+  ],
+  "author": "Pedro Beschorner Marin <pedrobmarin@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/pedrobmarin/bbb-playback/issues"
+  }
 }
