--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-intl": "^3.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "video.js": "^7.6.6",
