--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0",
   "homepage": "/playback/presentation/3.0",
   "dependencies": {
+    "classnames": "^2.2.6",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
