--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "/playback/presentation/2.3",
   "dependencies": {
     "classnames": "^2.2.6",
+    "linkifyjs": "^2.1.9",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
