--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "playback"
   ],
   "author": "Pedro Beschorner Marin <pedrobmarin@gmail.com>",
+  "license": "LGPL-3.0",
   "bugs": {
     "url": "https://github.com/bigbluebutton/bbb-playback/issues"
   }
