--- a/src/config.json
+++ b/src/config.json
@@ -42,7 +42,8 @@
       "notes": "notes.json",
       "panzooms": "panzooms.xml",
       "screenshare": "deskshare.xml",
-      "shapes": "shapes.svg"
+      "shapes": "shapes.svg",
+      "talkers": "talkers.json"
     },
     "type": {
       "json": "json",
