Add custom styles
A custom style is defined as an URL search parameter. Custom styles must be served
from a single host and the style name must be registered at the config file.

--- a/src/config.json
+++ b/src/config.json
@@ -60,6 +60,10 @@
     "interval": 60,
     "url": "/monitor"
   },
+  "styles": {
+    "url": "HOST",
+    "valid": []
+  },
   "thumbnails": {
     "align": "bottom",
     "scroll": true
