Title as an about modal button

--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,7 @@
     "scroll": true
   },
   "controls": {
-    "about": false,
+    "about": true,
     "fullscreen": true,
     "search": false,
     "section": true,
