Add new search experience
Removed videojs marker plugin and included a new search experience.

Search modal will preview the thumbnails search result and will propagate
it to the thumbnails area.

--- a/src/config.json
+++ b/src/config.json
@@ -6,7 +6,7 @@
   "controls": {
     "about": true,
     "fullscreen": true,
-    "search": false,
+    "search": true,
     "section": true,
     "swap": true,
     "thumbnails": true
@@ -51,6 +51,12 @@
     "enabled": false,
     "interval": 60,
     "url": "/monitor"
+  },
+  "search": {
+    "length": {
+      "min": 3,
+      "max": 32
+    }
   },
   "shortcuts": {
     "enabled": true,
