--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "classnames": "^2.2.6",
     "linkifyjs": "^2.1.9",
     "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-intl": "^5.4.2",
+    "react-intl": "^5.6.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "string-hash": "^1.1.3",
     "video.js": "^7.8.4",
     "xml2js": "^0.4.23"
