Fetch shared notes HTML exported file
Etherpad is able to export an HTML version of the meeting's shared notes. We
already store this data at the archive stage of the recordings flow and all we
have to do to enable the notes at the playback is to copy this notes.html file
to the meeting's published directory root.

--- a/src/config.json
+++ b/src/config.json
@@ -31,16 +31,11 @@
       "chat": "slides_new.xml",
       "cursor": "cursor.xml",
       "metadata": "metadata.xml",
-      "notes": "notes.json",
+      "notes": "notes.html",
       "panzooms": "panzooms.xml",
       "screenshare": "deskshare.xml",
       "shapes": "shapes.svg",
       "talkers": "talkers.json"
-    },
-    "type": {
-      "json": "json",
-      "svg": "text",
-      "xml": "text"
     }
   },
   "medias": [
