--- a/src/config.json
+++ b/src/config.json
@@ -34,8 +34,7 @@
       "notes": "notes.html",
       "panzooms": "panzooms.xml",
       "screenshare": "deskshare.xml",
-      "shapes": "shapes.svg",
-      "talkers": "talkers.json"
+      "shapes": "shapes.svg"
     }
   },
   "medias": [
