--- a/src/config.json
+++ b/src/config.json
@@ -34,6 +34,7 @@
       "notes": "notes.html",
       "panzooms": "panzooms.xml",
       "polls": "polls.json",
+      "questions": "questions.json",
       "screenshare": "deskshare.xml",
       "shapes": "shapes.svg"
     }
