--- a/src/config.json
+++ b/src/config.json
@@ -24,6 +24,10 @@
       "externalVideos": "external_videos.json",
       "screenshare": "deskshare.xml",
       "shapes": "shapes.svg"
+    },
+    "feedback": {
+      "enabled": true,
+      "timeout": 1000
     }
   },
   "locale": {
