--- a/src/config.json
+++ b/src/config.json
@@ -21,13 +21,9 @@
       "notes": "notes.html",
       "panzooms": "panzooms.xml",
       "polls": "polls.json",
-      "externalVideos": "external_videos.json",
+      "externalVideos": "external_videos.xml",
       "screenshare": "deskshare.xml",
       "shapes": "shapes.svg"
-    },
-    "feedback": {
-      "enabled": true,
-      "timeout": 1000
     }
   },
   "locale": {
