--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "linkifyjs": "^2.1.9",
-    "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.23.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "sass": "^1.49.0",
     "video.js": "^7.17.0",
     "xml2js": "^0.4.23"
   },
