feat(shortcuts): add play/pause control
Use `Alt`+`Shift`+`Enter` to play or pause the playback.

--- a/src/config.json
+++ b/src/config.json
@@ -47,6 +47,7 @@
   "shortcuts": {
     "enabled": true,
     "fullscreen": "K",
+    "play": "Enter",
     "section": "L",
     "seek": {
       "backward": "ArrowLeft",
