--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "/playback/presentation/2.3",
   "dependencies": {
     "classnames": "^2.3.1",
+    "darkreader": "^4.9.46",
     "linkifyjs": "^2.1.9",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
