refactor(controls): remove thumbnails
Deprecated since the thumbnails became a fixed element.

--- a/src/config.json
+++ b/src/config.json
@@ -9,8 +9,7 @@
     "search": true,
     "section": true,
     "swap": true,
-    "theme": true,
-    "thumbnails": true
+    "theme": true
   },
   "date": {
     "enabled": true
