--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "darkreader": "^4.9.46",
-    "linkifyjs": "^2.1.9",
+    "linkify-react": "^3.0.4",
+    "linkifyjs": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
