--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^6.3.0",
     "react-sizeme": "^3.0.2",
     "sass": "^1.52.1",
-    "video.js": "^7.19.2"
+    "video.js": "^7.19.2",
+    "videojs-seek-buttons": "^3.0.1"
   },
   "devDependencies": {
     "react-scripts": "^5.0.1"
