Remove eslint dependency

--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "videojs-seek-buttons": "^3.0.1"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
     "react-scripts": "^5.0.1"
   },
   "overrides": {
@@ -31,8 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "lint": "eslint ./src/ --ext .js,.jsx"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
