--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "5.1.0",
   "homepage": "/playback/presentation/2.3",
   "dependencies": {
-    "@tldraw/tldraw": "^2.0.0-alpha.18",
+    "@bigbluebutton/tldraw": "^2.0.0-alpha.20",
     "bowser": "^2.11.0",
     "classnames": "^2.3.1",
     "darkreader": "^4.9.46",
